# lipcoding-tae0y

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  Dockerfile  PRD.md  README.md  azure.yaml
.github/ISSUE_TEMPLATE/: 01-github-handle.yml  02-team-building.yml  03-result-submission.yml  config.yml
.github/agents/: tdd-green.agent.md  tdd-red.agent.md
.github/instructions/: copilot-sdk-python.instructions.md  fastapi.instructions.md  frontend.instructions.md  markdown.instructions.md  python.instructions.md  tests.instructions.md
.github/prompts/: scaffold-and-deploy.prompt.md
.github/workflows/: github-handle.yaml  result-submission.yaml  team-building.yaml
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  db.py  judgment.py  main.py  models.py  prompt_guard.py  research.py
backend/static/: index.html
backend/static/assets/: index-CCheUTMh.js  index-CUrH562E.css  index-DurhFHyn.css  index-pppfMoT1.js
backend/tests/: conftest.py  test_auth.py  test_ideas.py  test_prompt_guard.py  test_research.py  test_suggestions.py  test_user_state.py
docs/: FEEDBACK.md  README.md  RECALL.md  architecture.md  deploy-azure.md
docs/design/: design-dna.md  ui-redesign-ascii.md
docs/experience/: 2026-06-20-ai-poor-prioritization-under-time-pressure.md  2026-06-20-korean-stt-troubleshooting.md  (+8 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
infra/: main.bicep  main.bicepparam  main.bicepparam.direct-deploy-only  main.parameters.json
scripts/: build.sh  deploy-aca.sh
(+98 files in other folders)
