[project]
name = "workmem-inbox-backend"
version = "0.1.0"
description = "작업기억 보존 아이디어 인박스 — FastAPI 백엔드"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
]
